--- a/src/app/app.html
+++ b/src/app/app.html
@@ -184,16 +184,16 @@
 
 
 <main class="main">
+  <div class="header-morocco">
+    <div class="logos">
+      <img src="assets/federacion.png" alt="Federación Marroquí de Fútbol" class="logo-federation">
+    </div>
+    <h1 class="main-title">
+      MOROCCAN FOOTBALL LEAGUE
+      <span class="arabic-title">بطولة كرة القدم المغربية</span>
+    </h1>
+  </div>
   <calendar-upload />
 </main>
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
 
 <router-outlet />
