update desde vscode seguro que da probelmas

--- a/src/app/features/generateCalendar/generateCalendar.component.html
+++ b/src/app/features/generateCalendar/generateCalendar.component.html
@@ -22,7 +22,7 @@
       accept=".xlsx,.xls"
       (change)="onFileChange($event, 'excel')"
       class="form-control">
-    <small *ngIf="!excelFile" class="help-text">{{ 'calendar.selectFile' | translate }}</small>
+    <small *ngIf="!excelFile" class="help-text">{{ 'calendar.noFileSelected' | translate }}</small>
     <small *ngIf="excelFile" class="file-selected">✓ {{ excelFile.name }}</small>
   </div>
 
