Add pantalla de Jobs

--- a/src/app/shared/components/header/nav-section/nav-section.component.html
+++ b/src/app/shared/components/header/nav-section/nav-section.component.html
@@ -4,6 +4,10 @@
       {{ 'nav.generateCalendar' | translate }}
     </a>
     <span class="separator">|</span>
+    <a routerLink="/jobs" routerLinkActive="active">
+      {{ 'nav.jobs' | translate }}
+    </a>
+    <span class="separator">|</span>
     <a routerLink="/endpoints" routerLinkActive="active">
       {{ 'nav.endpoints' | translate }}
     </a>
