Update config desde backend y cargada de combos y resultado excel

--- a/src/app/features/generateCalendar/generateCalendar.component.html
+++ b/src/app/features/generateCalendar/generateCalendar.component.html
@@ -22,7 +22,7 @@
            (configOptions.length === 0 ? 'No hay opciones disponibles' : ('calendar.selectConfig' | translate)) }}
       </option>
       <option *ngFor="let config of configOptions" [value]="config.value">
-        {{ config.labelKey | translate }}{{ config.description ? ' - ' + config.description : '' }}
+  {{ config.labelKey | translate }}
       </option>
     </select>
   </div>
