update process edirtor properties

--- a/src/app/components/header/nav-section/nav-section.html
+++ b/src/app/components/header/nav-section/nav-section.html
@@ -3,5 +3,8 @@
     <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
       {{ 'nav.generateCalendar' | translate }}
     </a>
+    <a routerLink="/properties" routerLinkActive="active">
+      {{ 'propertiesManager.title' | translate }}
+    </a>
   </div>
 </div>
